Fixed uneven margin

--- a/coursera-module2/css/styles.css
+++ b/coursera-module2/css/styles.css
@@ -26,12 +26,13 @@ p{
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-top: 30px;
+	margin-bottom: 10px;
 }
 
 .section{
 	border: 1px solid black;
 	background-color: #A0A0A0;
-	margin: 5px;
+	margin: 10px;
 }
 
 #chicken{
@@ -68,7 +69,7 @@ p{
 /** Responsive Framework **/
 
 .row{
-	width: 90%;
+	width: 98%;
 	margin-left: auto;
 	margin-right: auto;
 }
